Website for a small business using jQuery and AJAX
This is a complete mockup of a static website.

--- a/styles/style.css
+++ b/styles/style.css
@@ -11,8 +11,13 @@
     padding: 20px 0px;
 }
 
+.form-control, .btn-default {
+
+    margin-top: 20px;
+}
+
 .footer {
 
-    padding: 20px 0px;
     text-align: center;
+    font-size: 150%;
 }
